# CloseClaw

./: .gitignore  .reviewer_audit  CONTRIBUTING.md  Cargo.toml  PLAN-fixture-capture.md  QUICKSTART.md  README.md  SPEC.md  SPEC_CONVENTION.md  TODO.md  build.rs  run_ddt_check.sh
crates/admin/: Cargo.toml
crates/admin/src/: client.rs  client_tests.rs  lib.rs  protocol.rs  server.rs  server_tests.rs
crates/agent/: Cargo.toml
crates/agent/src/: communication.rs  lib.rs  lookup.rs  skills_query.rs  spawn.rs  spawn_budget_tests.rs  spawn_permission_tests.rs  spawn_tests.rs  tools_config_query.rs
crates/cli/: Cargo.toml
crates/cli/src/: bridge.rs  chat.rs  chat_tests.rs  lib.rs  renderer.rs  renderer_tests.rs  terminal.rs  terminal_tests.rs
crates/cli/tests/: handlers_tests.rs
crates/common/: Cargo.toml
crates/common/src/: agent_config.rs  agent_config_lookup.rs  agent_lookup.rs  bootstrap.rs  code_block.rs  communication.rs  compaction.rs  fragment.rs  fragment_tests.rs  gateway_spawn.rs  gateway_stop.rs  gateway_types.rs  hook_config.rs  identity.rs  im_plugin.rs  im_plugin_tests.rs  lib.rs  llm_caller.rs  llm_error.rs  llm_stats.rs  llm_streaming.rs  llm_types.rs  metrics.rs  middleware.rs  middleware_tests.rs  mode_transition.rs  notifier.rs  notifier_tests.rs  permission_check.rs  permission_op.rs  permission_op_tests.rs  permission_types.rs  plan_state.rs  plan_state_tests.rs  plan_status_tests.rs  processor.rs  processor_tests.rs  request_context.rs  session_lookup.rs  session_mode.rs  (+23 more)
crates/config/: Cargo.toml
crates/config/src/: agent_loader.rs  agent_loader_tests.rs  backup.rs  events.rs  events_tests.rs  identity.rs  lib.rs  manager.rs  manager_reload.rs  manager_reload_tests.rs  manager_tests.rs  migration.rs  migration_tests.rs  reload_manager.rs  reload_manager_tests.rs  session.rs  session_compact_tests.rs  spawn_validation.rs  validators.rs  validators_cron_tests.rs  validators_tests.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: bridge.rs  config_reload_tests.rs  config_watcher.rs  dreaming_scheduler.rs  dreaming_scheduler_tests.rs  lifecycle.rs  lifecycle_tests.rs  mod.rs  noop_miner_llm.rs  registries.rs  shutdown_alignment_tests.rs  skill_reload.rs  spawn_controller_crate_reexport_tests.rs  test_helpers.rs  tests.rs  trait_adapters.rs  unit_tests.rs
crates/execution/: Cargo.toml
crates/execution/src/: engine.rs  engine_notifier_tests.rs  engine_status_tests.rs  engine_step_selection_tests.rs  engine_tests.rs  error.rs  event.rs  hook.rs  hook_tests.rs  lib.rs  mode.rs  notification.rs  permission_tests.rs  spawn.rs  types.rs  types_tests.rs
crates/execution/tests/: cross_module_integration_tests.rs  execution_integration_tests.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: announce_sweeper.rs  announce_sweeper_tests.rs  approval.rs  approval_tests.rs  card_action.rs  compute_session_key_tests.rs  health_check_builders.rs  health_check_builders_tests.rs  inbound_chain_tests.rs  inbound_queue.rs  inbound_queue_tests.rs  lib.rs  llm_caller.rs  llm_caller_impl.rs  llm_caller_tests.rs  message.rs  non_text_interception_tests.rs  notification_tests.rs  outbound.rs  outbound_checkpoint_timing_tests.rs  outbound_fallback_tests.rs  outbound_tests.rs  priority_prompt_tests.rs  receiving_transition_tests.rs  session_handler.rs  session_handler_announce.rs  session_handler_compaction.rs  session_handler_dispatch.rs  session_handler_dynamic_tests.rs  session_handler_recovery_tests.rs  session_handler_streaming.rs  session_handler_tests.rs  session_manager.rs  session_prompt_helper.rs  session_routing_tests.rs  shutdown_card.rs  shutdown_handle.rs  shutdown_handle_tests.rs  shutdown_phase_tests.rs  slash_execute.rs  (+16 more)
crates/im_adapter/: Cargo.toml  build.rs
crates/im_adapter/src/: code_block.rs  error.rs  lib.rs  normalized.rs  normalized_tests.rs  plugin.rs  plugin_tests.rs  render_hooks.rs  streaming.rs  streaming_tests.rs  tool_registrar.rs
crates/llm/: Cargo.toml
crates/llm/src/: anthropic.rs  client.rs  client_test.rs  compaction.rs  compaction_tests.rs  deepseek.rs  fallback.rs  fallback_tests.rs  glm_stream.rs  http_client.rs  interpreter.rs  interpreter_test.rs  knowledge.rs  lib.rs  llm_caller.rs  minimax.rs  minimax_stream.rs  model_cache.rs  model_discovery.rs  model_discovery_tests.rs  model_info.rs  openai.rs  plugin.rs  provider.rs  retry.rs  session_exec.rs  session_handles.rs  session_state.rs  sink_updater.rs  stats.rs  stream_utils.rs  streaming.rs  stub.rs  tests.rs  turn.rs  types.rs  types_tests.rs  unified_fallback.rs  unified_fallback_tests.rs  volcengine.rs
crates/memory/: Cargo.toml
crates/memory/src/: active_searcher.rs  active_searcher_llm.rs  active_searcher_tests.rs  dreaming.rs  dreaming_gap_fix_tests.rs  dreaming_llm.rs  dreaming_scoring_tests.rs  dreaming_status_tests.rs  dreaming_tests.rs  embedding.rs  embedding_tests.rs  lib.rs  miner.rs  miner_llm.rs  miner_tests.rs  miner_transcript.rs  test_helpers.rs
crates/permission/: Cargo.toml
crates/permission/src/: approval.rs  approval_flow.rs  approval_flow_user_creation.rs  lib.rs  mock_session_lookup.rs  permission_op_tests.rs  skill_wrapper.rs  templates.rs  user_registry.rs  user_registry_tests.rs  whitelist.rs
crates/platform/: Cargo.toml
crates/platform/src/: config.rs  config_tests.rs  fs.rs  fs_tests.rs  lib.rs  process.rs  process_tests.rs  terminal.rs  terminal_tests.rs
crates/processor_chain/: Cargo.toml
crates/processor_chain/src/: build_processor_registry_tests.rs  content_normalizer.rs  content_normalizer_tests.rs  context.rs  context_tests.rs  dsl_parser.rs  dsl_parser_tests.rs  lib.rs  loader.rs  loader_tests.rs  middleware.rs  middleware_tests.rs  mod.rs  outbound_chain_tests.rs  outbound_raw_log.rs  outbound_raw_log_tests.rs  processor.rs  raw_log_processor.rs  registry.rs  registry_tests.rs  session_router.rs  (+3 more)
crates/session/: Cargo.toml
crates/skills/: Cargo.toml
crates/slash/: Cargo.toml
crates/system_prompt/: Cargo.toml
crates/tasks/: Cargo.toml
crates/tools/: Cargo.toml
crates/workflow/: Cargo.toml
(+2124 files in other folders)
