[workspace]
members = ["crates/common", "crates/config", "crates/session", "crates/llm"]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/jpxthu/CloseClaw"

[package]
name = "closeclaw"
version = "0.1.0"
edition.workspace = true
authors = ["CloseClaw Team"]
description = "Lightweight, rule-driven multi-agent execution framework"
license.workspace = true
repository.workspace = true
rust-version = "1.80"

[features]
fake-llm = ["closeclaw-llm/fake-llm"]

[dependencies]
# Async runtime - pinned to older version to avoid edition2024 issues
tokio = { version = "=1.35.0", features = ["full"] }
# Cancellation tokens with native parent/child derivation (used for cascade stop)
# The `sync` module (containing `CancellationToken`) is always available; no
# extra feature flags are required.
tokio-util = "0.7"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Logging - pinned to older versions
tracing = "=0.1.43"
tracing-subscriber = { version = "=0.3.17", features = ["env-filter", "json"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Linux system APIs (seccomp, landlock)
libc = "0.2"
# Terminal size detection for dynamic width truncation
terminal_size = "0.4"

# HTTP client (rustls for TLS, no OpenSSL required)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# Async channels
flume = "=0.11"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Regex
regex = "1.10"
regex-lite = "0.1"

# Async trait (for IMAdapter)
async-trait = "0.1"

# Concurrent HashMap (used by AgentRegistry for lock-free reads)
dashmap = "5"

# Redis client for session persistence
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# SQLite for session persistence (bundled to avoid system SQLite dependency)
rusqlite = { version = "0.31", features = ["bundled"] }

# URL encoding
url = "2"

# Hashing (for signature validation)
sha2 = "0.10"
hex = "0.4"

# File watching (hot reload)
notify = "6.1"
notify-debouncer-mini = "0.4"

# Internal crates
closeclaw-common = { path = "crates/common" }
closeclaw-config = { path = "crates/config" }
closeclaw-session = { path = "crates/session" }
closeclaw-llm = { path = "crates/llm" }

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Interactive prompts for setup wizard
dialoguer = "0.11"

# HTTP server for inbox endpoints
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# For getting home directory
dirs = "5"

# Glob pattern matching (for conditional skill activation)
glob = "0.3"
async-stream = "0.3.6"

# Tree-sitter for Bash AST parsing
tree-sitter = "0.24"
tree-sitter-bash = "0.23"

# Plugin auto-discovery (inventory collects platform entries at compile time)
inventory = "0.3"


[dev-dependencies]
# Testing
proptest = "=1.4"
tempfile = "3.10"
serial_test = "3.4"
mockito = "1.2"
# Coverage reporting
cargo-llvm-cov = "0.6"

[lib]
name = "closeclaw"
path = "src/lib.rs"

[[bin]]
name = "closeclaw"
path = "src/main.rs"

[profile.dev]
codegen-units = 1024

[profile.test]
codegen-units = 1024
debug = 0

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("server", "chat-legacy"))'] }
