[workspace]
members = ["crates/common", "crates/config", "crates/session", "crates/llm", "crates/permission", "crates/gateway", "crates/skills", "crates/tools", "crates/im_adapter", "crates/processor_chain", "crates/platform", "crates/tasks", "crates/memory", "crates/slash", "crates/agent", "crates/system_prompt", "crates/cli", "crates/daemon", "crates/workflow"]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/jpxthu/CloseClaw"

[package]
name = "closeclaw"
version = "0.1.0"
edition.workspace = true
authors = ["CloseClaw Team"]
description = "Lightweight, rule-driven multi-agent execution framework"
license.workspace = true
repository.workspace = true
rust-version = "1.80"

[features]
fake-llm = ["closeclaw-llm/fake-llm"]

[dependencies]
# Async runtime - pinned to older version to avoid edition2024 issues
tokio = { version = "=1.35.0", features = ["full"] }
# Cancellation tokens with native parent/child derivation (used for cascade stop)
# The `sync` module (containing `CancellationToken`) is always available; no
# extra feature flags are required.
tokio-util = "0.7"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging - pinned to older versions
tracing = "=0.1.43"
tracing-subscriber = { version = "=0.3.17", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"

# Linux system APIs (seccomp, landlock)
libc = "0.2"
# Terminal size detection for dynamic width truncation
terminal_size = "0.4"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Async trait (for IMAdapter)
async-trait = "0.1"





# File watching (hot reload)
notify = "6.1"
# Internal crates
closeclaw-memory = { path = "crates/memory" }
closeclaw-common = { path = "crates/common" }
closeclaw-config = { path = "crates/config" }
closeclaw-session = { path = "crates/session" }
closeclaw-llm = { path = "crates/llm" }
closeclaw-permission = { path = "crates/permission" }
closeclaw-gateway = { path = "crates/gateway" }
closeclaw-skills = { path = "crates/skills" }
closeclaw-tools = { path = "crates/tools" }
closeclaw-im-adapter = { path = "crates/im_adapter" }
closeclaw-processor-chain = { path = "crates/processor_chain" }
closeclaw-platform = { path = "crates/platform" }
closeclaw-tasks = { path = "crates/tasks" }
closeclaw-slash = { path = "crates/slash" }
closeclaw-agent = { path = "crates/agent" }
closeclaw-system-prompt = { path = "crates/system_prompt" }

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# For getting home directory
dirs = "5"

closeclaw-cli = { path = "crates/cli" }
closeclaw-daemon = { path = "crates/daemon" }


[dev-dependencies]
# Testing
proptest = "=1.4"
tempfile = "3.10"
serial_test = "3.4"
mockito = "1.2"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
# Coverage reporting
cargo-llvm-cov = "0.6"

[lib]
name = "closeclaw"
path = "src/lib.rs"

[[bin]]
name = "closeclaw"
path = "src/main.rs"

[profile.dev]
codegen-units = 1024

[profile.test]
codegen-units = 1024
debug = 0

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("server", "chat-legacy"))'] }
