[package]
name = "closeclaw-common"
version = "0.1.0"
edition = "2021"
description = "Shared types and utilities for CloseClaw"
license = "MIT"

[dependencies]
async-trait = "0.1"
anyhow = "1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
thiserror = "2.0"
tokio = { version = "=1.35.0", features = ["sync", "process"] }

[dev-dependencies]
tokio = { version = "=1.35.0", features = ["rt", "rt-multi-thread", "macros"] }
