[package]
name = "closeclaw-config"
version = "0.1.0"
edition = "2021"
description = "Configuration management for CloseClaw"
license = "MIT"

[dependencies]
closeclaw-common = { path = "../common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
tracing = "=0.1.43"
notify = "6.1"
dashmap = "5"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
regex-lite = "0.1"
dirs = "5"
tokio = { version = "=1.35.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.10"
tracing-subscriber = { version = "=0.3.17", features = ["env-filter", "json"] }
