[package]
name = "closeclaw-execution"
version = "0.1.0"
edition = "2021"
description = "Plan execution engine: scheduling, retry, and sub-agent orchestration"
license = "MIT"

[dev-dependencies]
tokio = { version = "=1.35.0", features = ["rt", "macros", "time"] }

[dependencies]
closeclaw-common = { path = "../common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
async-trait = "0.1"
tracing = "=0.1.43"
tokio = { version = "=1.35.0", features = ["process", "time"] }
