[package]
name = "closeclaw-gateway"
version = "0.1.0"
edition.workspace = true
description = "Gateway - IM protocol adapters, message routing, authentication"
license = "MIT"

[features]
full-tests = []

[dependencies]
# Internal crates
closeclaw-common = { path = "../common" }
closeclaw-config = { path = "../config" }
closeclaw-session = { path = "../session" }
closeclaw-llm = { path = "../llm" }
closeclaw-memory = { path = "../memory" }
closeclaw-permission = { path = "../permission" }

# Async runtime
tokio = { version = "=1.35.0", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "=0.1.43"

# Error handling
thiserror = "2.0"

# Async trait
async-trait = "0.1"

# System
libc = "0.2"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Hashing
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3.10"
serial_test = "3.4"
