[package]
name = "closeclaw-permission"
version = "0.1.0"
edition.workspace = true
description = "Permission engine for CloseClaw"
license = "MIT"

[dependencies]
closeclaw-common = { path = "../common" }
closeclaw-config = { path = "../config" }
closeclaw-session = { path = "../session" }

tokio = { version = "=1.35.0", features = ["full"] }
async-trait = "0.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

thiserror = "2.0"
tracing = "=0.1.43"

chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

sha2 = "0.10"
