[package]
name = "closeclaw-platform"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OS abstraction layer for CloseClaw"

[dependencies]
anyhow = "1.0"
libc = "0.2"
tokio = { version = "=1.35.0", features = ["signal"] }
tracing = "=0.1.43"

[dev-dependencies]
tempfile = "3.10"
