[package]
name = "closeclaw-session"
version = "0.1.0"
edition.workspace = true
description = "Session management for CloseClaw"
license = "MIT"

[dependencies]
# Internal crates
closeclaw-common = { path = "../common" }
closeclaw-config = { path = "../config" }

# Async runtime
tokio = { version = "=1.35.0", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Logging
tracing = "=0.1.43"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Hashing
sha2 = "0.10"

# Redis client
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# SQLite
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tempfile = "3.10"
serial_test = "3.4"
